<resources>
    <string name="app_name">Glup</string>

    // Bottons Main Layout
    <string name="gps">Map</string>
    <string name="pay">Payments</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    // Text for Map Layout
    <string name="map_text">You are in Maps!</string>

    // Text for Payments Layout
    <string name="payments_text">You are in Payments!</string>

    // Text for Profile Layout
    <string name="profile_text">You are in Profile!</string>

    // Text for Settings Layout
    <string name="settings_text">You are in Settings!</string>

    // Text for Login Layout
    <string name="welcome_text">Hello There, Welcome Back!</string>
    <string name="sign_in_text">Sign in to continue</string>

    // Text for Registration Layout
    <string name="welcome_text_reg">Welcome to Glup!</string>
    <string name="sign_text">Sign up to start your new Journey!</string>
    <string name="full_name_text">Full Name</string>
    <string name="username_text">Username</string>
    <string name="pass_text">Password</string>
    <string name="email_text">Email</string>
    <string name="nif_text">NIF (Optional)</string>
    <string name="phone_text">Phone Number (Optional)</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="back_to_sign_in_text">ALREADY HAVE AN ACCOUNT? LOG IN</string>

    // Text for Settings Layout
    <string name="options_text">Options!!!</string>

    //
    <string name="code_text">CO\nDE</string>

</resources>