<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_gps"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="250dp"
        android:backgroundTint="#00FFFFFF"
        android:text="Map"
        android:textColor="@color/greenglup"
        app:layout_constraintBottom_toTopOf="@+id/button_pay"
        app:layout_constraintEnd_toEndOf="@+id/mapa"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="@+id/mapa"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mapa"
        android:layout_width="233dp"
        android:layout_height="87dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/mapa"
        app:layout_constraintBottom_toBottomOf="@+id/button_gps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_gps"
        app:layout_constraintVertical_bias="1.0"></ImageView>

    <Button
        android:id="@+id/button_pay"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="106dp"
        android:text="@string/pay"
        app:layout_constraintBottom_toTopOf="@+id/button_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_gps" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="60dp"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="60dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginBottom="67dp"
        android:background="@color/greenglup"
        android:padding="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_gps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/view2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:elevation="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.0"
            app:cardCornerRadius="50dp"
            app:strokeColor="@color/black"
            app:strokeWidth="5dp">

            <Button
                android:id="@+id/button_profile_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:src="@drawable/antoniocosta"></ImageView>

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/view2"
            android:fontFamily="@font/bungee_regular"
            android:includeFontPadding="false"
            android:text="António Costa"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/full_name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/view2"
            android:fontFamily="@font/bungee_regular"
            android:includeFontPadding="false"
            android:text="tony_costa"
            android:textSize="14sp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="109dp"
        android:layout_height="89dp"
        android:layout_gravity="center"
        android:layout_marginStart="298dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="131dp"
        android:src="@drawable/glup"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:layout_width="76dp"
        android:layout_height="90dp"
        android:layout_marginStart="310dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="22dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_profile_balance"
            android:layout_width="65dp"
            android:layout_height="77dp"
            android:background="#00000000" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/money_icon_app" />

        <TextView
            android:id="@+id/payment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/bungee_regular"
            android:includeFontPadding="false"
            android:text="$123"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/payment_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/payment_label"
            android:layout_centerHorizontal="true"
            android:includeFontPadding="false"
            android:text="Balance"
            android:textSize="14sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iconplus"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="329dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/iconplus"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.65999997"></ImageView>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-9dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-51dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-7dp" />


</androidx.constraintlayout.widget.ConstraintLayout>